<resources>
    <!-- SIGN IN VIEW -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="short_password">Password is too Short! (min 8 chars)</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="used_email">Already used email!</string>
    <string name="error_authentication">Error during authentication! Retry later…</string>

    <!-- NICKNAME VIEW -->
    <string name="user_not_logged">Error! User not logged in.</string>
    <string name="choose_nickname">Choose a nickname</string>
    <string name="nickname_hint">Nickname</string>
    <string name="enter_the_game_button">Enter the game</string>
    <string name="change_user_button">Change user</string>
    <string name="short_nickname">Nickname is too short! (min 3 chars)</string>
    <string name="error_user">Error while getting user! retry later…</string>
    <string name="error_used_nickname">Nickname already used!</string>
    <string name="error_updating_nickname">Error updating nickname! Retry later…</string>

    <!-- MATCHES VIEW -->
    <string name="already_used_name">This match name is already used.</string>
    <string name="return_to_game_button">Return to the game</string>
    <string name="back_button">Back</string>
    <string name="create_new_match">Create new match</string>
    <string name="match_name">Match name</string>
    <string name="match_passkey">Match passkey</string>
    <string name="rounds">Rounds: </string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="create_match_button">Create</string>
    <string name="choose_existing_match">Choose an existing match</string>
    <string name="join_match_button">Join</string>
    <string name="wrong_passkey">Wrong passkey!</string>
    <string name="error_update">Error while updating data! retry later…</string>
    <string name="error_no_matches">Error! No match selected!</string>
    <string name="error_adding_user">Error adding user! Retry later…</string>
    <string name="error_returning">"Error while returning to match! Retry later…"</string>

    <!-- WAITING PLAYERS -->
    <string name="wait_player">Waiting for players</string>
    <string name="players_count">Players count: </string>
    <string name="start_button">Start match</string>
    <string name="cancel_button">Cancel match</string>
    <string name="error_match_cancelled">Match has been cancelled!</string>
    <string name="error_updating_user">Error while updating user! Retry later…</string>
    <string name="error_removing_match">Error while removing match!</string>
    <string name="error_activating_match">Error while activating match! Retry later…</string>
    <string name="not_enough_players">Not enough players! (min 3)</string>

    <!-- LOADING -->
    <string name="shuffling_cards">Shuffling cards</string>
    <string name="distributing_cards">Distributing cards</string>

    <!-- GAME -->
    <string name="button_done">Done</string>
    <string name="button_exit">Exit</string>
    <string name="not_enough_cards">Choose enough cards to fill all gaps!</string>
    <string name="no_best_choice">Choose a best match to fill gaps in black card!</string>
    <string name="not_all_players_voted">Wait until all players have voted!</string>
    <string name="error_cards">Error in getting cards! retry later…</string>
    <string name="points">Points: </string>
    <string name="placement">Placement: </string>
    <string name="round">Round: </string>
    <string name="error_getting_data">Error getting data from db! Retry later…</string>
    <string name="error_match_deleted">Match has been deleted!</string>


    <!-- AWARDING -->
    <string name="you_win">You win!</string>
    <string name="you_lost">You lost!</string>
    <string name="you_win_the_game">You win the game!</string>
    <string name="you_lost_the_game">You lost the game!</string>
    <string name="error_ending">Error ending game!</string>
    <string name="error_deleting">Error deleting game!</string>

    <!-- LOADING -->
    <string name="loading">Loading</string>
    <string name="error_no_card">Error card not found!</string>
    <string name="error_cleaning_cards">Error cleaning cards!</string>


    <!-- OTHERS -->
    <string name="app_name">Card Against Humanity</string>
    <string name="logo">logo</string>
</resources>