<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="355dp"
        android:layout_height="365dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_nickname"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_show_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/days_one"
        android:text="@string/points"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_nickname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_nickname"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/days_one"
        android:text="@string/choose_nickname"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_points" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:fontFamily="@font/days_one"
        android:hint="@string/nickname_hint"
        android:inputType="text"
        android:isScrollContainer="false"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/tv_nickname"
        app:layout_constraintStart_toStartOf="@+id/tv_nickname"
        app:layout_constraintTop_toBottomOf="@+id/tv_nickname" />

    <Button
        android:id="@+id/bt_enter"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/days_one"
        android:text="@string/enter_the_game_button"
        app:layout_constraintEnd_toEndOf="@+id/et_nickname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_nickname"
        app:layout_constraintTop_toBottomOf="@+id/et_nickname" />

    <Button
        android:id="@+id/bt_change_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/change_user_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bt_enter"
        app:layout_constraintStart_toStartOf="@+id/bt_enter"
        app:layout_constraintTop_toBottomOf="@+id/bt_enter"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>